--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
+  <script async="async" src="//bmst.pw/2390903x50.js"></script>
+
         <div id="contactBuy">
           <ul>
             <li class="buyt"><a href="#">Купити квиток</a></li>
